--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,140 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
+    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post">
+      <fieldset class="group">
+        <legend>Personal information</legend>
+        <label>Surname:
+          <input
+            type="text"
+            name="last-name"
+            autocomplete="off"
+            required
+          >
+        </label>
+        <label class="form-label">Name:
+          <input
+            type="text"
+            name="fist-name"
+            autocomplete="off"
+            required
+          >
+        </label>
+        <label class="form-label">How old are You?
+          <input
+            type="number"
+            name="age"
+            min="1"
+            max="100"
+            value="12"
+          >
+        </label>
+        <label class="form-label">Full date of birth:
+          <input
+            type="date"
+            name="birth-date"
+            class="date-input"
+          >
+        </label>
+        <label class="form-label">I accept the term of the agreement
+          <input type="checkbox" name="terms">
+        </label>
+      </fieldset>
+      <fieldset class="group">
+        <legend>Registration</legend>
+        <label>E-mail:
+          <input
+            type="email"
+            name="email"
+            placeholder="email@example.com"
+            required
+            multiple
+          >
+        </label>
+        <label class="form-label">Password:
+          <input
+            type="password"
+            name="password"
+            minlength="5"
+            maxlength="32"
+            required
+          >
+        </label>
+      </fieldset>
+      <fieldset class="group">
+        <legend>An interesting fact about you!</legend>
+        <label>Do you love cats?
+          <input
+            type="radio"
+            name="cats"
+            id="yes"
+          >
+          <label for="yes">Yes</label>
+          <input
+            type="radio"
+            name="cats"
+            id="no"
+          >
+          <label for="no">No</label>
+        </label>
+        <label class="form-label">What is your favorite color?
+          <input
+            type="color"
+            name="color"
+          >
+        </label>
+        <label class="form-label">What time do you go to bed?
+          <input
+            type="time"
+            name="bedtime"
+            class="time-input"
+            step="2"
+          >
+        </label>
+        <label class="form-label">What are your favorite brand of cars?
+          <select
+            name="cars"
+            multiple size="4"
+            class="cars-selector"
+          >
+            <option value="bmw">BMW</option>
+            <option value="audi">Audi</option>
+            <option value="lada">Lada</option>
+          </select>
+        </label>
+
+        </div>
+        <label class="form-label">How do you rate our work
+          <input
+            class="slider"
+            type="range"
+            name="work-rating"
+            value="0"
+          >
+        </label>
+      </fieldset>
+      <fieldset class="group">
+        <legend>Additional info:</legend>
+        <label>Comments:
+          <textarea
+            name="comments"
+            cols="20"
+            rows="2"
+          >
+          </textarea>
+        </label>
+        <label class="form-label">Would you recommend us?
+          <span class="selector-span">
+            <select name="recommendation" class="selector">
+              <option value="yes">yes</option>
+              <option value="no">no</option>
+              <option value="maybe">maybe</option>
+            </select>
+          </span>
+        </label>
+      </fieldset>
+      <button type="submit" class="submit_button">Submit</button>
+    </form>
     <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
