label text moved to new line, /div - removed

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
     <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post">
       <fieldset class="group">
         <legend>Personal information</legend>
-        <label>Surname:
+        <label>
+          Surname:
           <input
             type="text"
             name="last-name"
@@ -22,7 +23,8 @@
             required
           >
         </label>
-        <label class="form-label">Name:
+        <label class="form-label">
+          Name:
           <input
             type="text"
             name="fist-name"
@@ -30,7 +32,8 @@
             required
           >
         </label>
-        <label class="form-label">How old are You?
+        <label class="form-label">
+          How old are You?
           <input
             type="number"
             name="age"
@@ -39,20 +42,23 @@
             value="12"
           >
         </label>
-        <label class="form-label">Full date of birth:
+        <label class="form-label">
+          Full date of birth:
           <input
             type="date"
             name="birth-date"
             class="date-input"
           >
         </label>
-        <label class="form-label">I accept the term of the agreement
+        <label class="form-label">
+          I accept the term of the agreement
           <input type="checkbox" name="terms">
         </label>
       </fieldset>
       <fieldset class="group">
         <legend>Registration</legend>
-        <label>E-mail:
+        <label>
+          E-mail:
           <input
             type="email"
             name="email"
@@ -61,7 +67,8 @@
             multiple
           >
         </label>
-        <label class="form-label">Password:
+        <label class="form-label">
+          Password:
           <input
             type="password"
             name="password"
@@ -73,7 +80,8 @@
       </fieldset>
       <fieldset class="group">
         <legend>An interesting fact about you!</legend>
-        <label>Do you love cats?
+        <label>
+          Do you love cats?
           <input
             type="radio"
             name="cats"
@@ -87,13 +95,15 @@
           >
           <label for="no">No</label>
         </label>
-        <label class="form-label">What is your favorite color?
+        <label class="form-label">
+          What is your favorite color?
           <input
             type="color"
             name="color"
           >
         </label>
-        <label class="form-label">What time do you go to bed?
+        <label class="form-label">
+          What time do you go to bed?
           <input
             type="time"
             name="bedtime"
@@ -101,7 +111,8 @@
             step="2"
           >
         </label>
-        <label class="form-label">What are your favorite brand of cars?
+        <label class="form-label">
+          What are your favorite brand of cars?
           <select
             name="cars"
             multiple size="4"
@@ -112,9 +123,8 @@
             <option value="lada">Lada</option>
           </select>
         </label>
-
-        </div>
-        <label class="form-label">How do you rate our work
+        <label class="form-label">
+          How do you rate our work
           <input
             class="slider"
             type="range"
@@ -125,7 +135,8 @@
       </fieldset>
       <fieldset class="group">
         <legend>Additional info:</legend>
-        <label>Comments:
+        <label>
+          Comments:
           <textarea
             name="comments"
             cols="20"
@@ -133,7 +144,8 @@
           >
           </textarea>
         </label>
-        <label class="form-label">Would you recommend us?
+        <label class="form-label">
+          Would you recommend us?
           <span class="selector-span">
             <select name="recommendation" class="selector">
               <option value="yes">yes</option>
