box-sizing changed to default, textarea problem solved

--- a/src/index.html
+++ b/src/index.html
@@ -141,8 +141,7 @@
             name="comments"
             cols="20"
             rows="2"
-          >
-          </textarea>
+          ></textarea>
         </label>
         <label class="form-label">
           Would you recommend us?
